
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "support-ticket-router-llm"
version = "0.1.0"
description = "Classify tickets, suggest queues, and summarize urgency drivers for faster support workflows."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
